--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.16",
-    "@ionic/storage": "2.1.3",
+    "@ionic/storage": "^2.1.3",
     "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-sqlite-storage": "^2.2.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
@@ -42,7 +43,8 @@
     "plugins": {
       "cordova-plugin-geolocation": {
         "GEO_LOCATION_USAGE_DESCRIPTION": "Get Location for creating alert"
-      }
+      },
+      "cordova-sqlite-storage": {}
     }
   }
 }
