--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/core": "^4.4.0",
     "@ionic-native/geolocation": "^4.5.2",
+    "@ionic-native/sms": "^4.5.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.16",
     "@ionic/storage": "^2.1.3",
     "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-sms-plugin": "^0.1.11",
     "cordova-sqlite-storage": "^2.2.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -44,7 +46,8 @@
       "cordova-plugin-geolocation": {
         "GEO_LOCATION_USAGE_DESCRIPTION": "Get Location for creating alert"
       },
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-sms-plugin": {}
     }
   }
 }
