--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "5.0.3",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
+    "@ionic-native/background-geolocation": "^4.5.2",
     "@ionic-native/core": "^4.4.0",
     "@ionic-native/geolocation": "^4.5.2",
     "@ionic-native/sms": "^4.5.2",
@@ -27,14 +28,21 @@
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.16",
     "@ionic/storage": "^2.1.3",
+    "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-mauron85-background-geolocation": "^2.3.3",
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-whitelist": "^1.3.1",
     "cordova-sms-plugin": "^0.1.11",
     "cordova-sqlite-storage": "^2.2.0",
     "ionic-angular": "3.9.2",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18"
+    "zone.js": "0.8.18",
+    "cordova-ios": "~4.5.4"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.6",
@@ -47,7 +55,16 @@
         "GEO_LOCATION_USAGE_DESCRIPTION": "Get Location for creating alert"
       },
       "cordova-sqlite-storage": {},
-      "cordova-sms-plugin": {}
-    }
+      "cordova-sms-plugin": {},
+      "cordova-plugin-mauron85-background-geolocation": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {}
+    },
+    "platforms": [
+      "ios"
+    ]
   }
 }
