--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/background-geolocation": "^4.5.2",
+    "@ionic-native/contacts": "^4.5.2",
     "@ionic-native/core": "^4.4.0",
     "@ionic-native/geolocation": "^4.5.2",
     "@ionic-native/sms": "^4.5.2",
@@ -28,6 +29,8 @@
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.16",
     "@ionic/storage": "^2.1.3",
+    "cordova-ios": "~4.5.4",
+    "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-ionic-webview": "^1.1.16",
@@ -41,8 +44,7 @@
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "cordova-ios": "~4.5.4"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.6",
@@ -61,7 +63,8 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-contacts": {}
     },
     "platforms": [
       "ios"
