--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/core": "^4.4.0",
     "@ionic-native/geolocation": "^4.5.2",
     "@ionic-native/sms": "^4.5.2",
+    "@ionic-native/social-sharing": "^4.5.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.16",
@@ -37,8 +38,10 @@
     "cordova-plugin-mauron85-background-geolocation": "^2.3.3",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-whitelist": "^1.3.1",
+    "cordova-plugin-x-socialsharing": "^5.2.1",
     "cordova-sms-plugin": "^0.1.11",
     "cordova-sqlite-storage": "^2.2.0",
+    "es6-promise-plugin": "^4.1.0",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
@@ -64,7 +67,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-contacts": {}
+      "cordova-plugin-contacts": {},
+      "cordova-plugin-x-socialsharing": {}
     },
     "platforms": [
       "ios"
