--- a/package.json
+++ b/package.json
@@ -24,15 +24,19 @@
     "@ionic-native/contacts": "^4.5.2",
     "@ionic-native/core": "^4.4.0",
     "@ionic-native/geolocation": "^4.5.2",
+    "@ionic-native/http": "^4.5.2",
     "@ionic-native/sms": "^4.5.2",
     "@ionic-native/social-sharing": "^4.5.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.16",
     "@ionic/storage": "^2.1.3",
+    "cordova-android": "~7.0.0",
     "cordova-ios": "~4.5.4",
+    "cordova-plugin-advanced-http": "^1.9.1",
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-mauron85-background-geolocation": "^2.3.3",
@@ -47,8 +51,7 @@
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "cordova-android": "~7.0.0"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.6",
@@ -69,7 +72,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-contacts": {},
-      "cordova-plugin-x-socialsharing": {}
+      "cordova-plugin-x-socialsharing": {},
+      "cordova-plugin-advanced-http": {}
     },
     "platforms": [
       "ios",
