--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "plert",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
+  "author": "Plert",
+  "homepage": "http://www.plert.nets/",
   "private": true,
   "scripts": {
     "clean": "ionic-app-scripts clean",
