--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/core": "^4.4.0",
     "@ionic-native/geolocation": "^4.5.2",
     "@ionic-native/http": "^4.5.2",
+    "@ionic-native/launch-navigator": "^4.6.0",
     "@ionic-native/sms": "^4.5.2",
     "@ionic-native/social-sharing": "^4.5.2",
     "@ionic-native/splash-screen": "4.4.0",
@@ -33,9 +34,11 @@
     "@ionic/storage": "^2.1.3",
     "cordova-android": "~7.0.0",
     "cordova-ios": "^4.5.4",
+    "cordova-plugin-actionsheet": "^2.3.3",
     "cordova-plugin-advanced-http": "^1.9.1",
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-dialogs": "^2.0.1",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-ionic-webview": "^1.1.16",
@@ -51,6 +54,7 @@
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
+    "uk.co.workingedge.phonegap.plugin.launchnavigator": "^4.1.5",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
@@ -73,7 +77,10 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-contacts": {},
       "cordova-plugin-x-socialsharing": {},
-      "cordova-plugin-advanced-http": {}
+      "cordova-plugin-advanced-http": {},
+      "uk.co.workingedge.phonegap.plugin.launchnavigator": {
+        "LOCATION_USAGE_DESCRIPTION": "This app requires access to your location for navigation purposes"
+      }
     },
     "platforms": [
       "android",
