--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/contacts": "^4.5.2",
     "@ionic-native/core": "^4.4.0",
     "@ionic-native/geolocation": "^4.5.2",
+    "@ionic-native/google-plus": "^4.6.0",
     "@ionic-native/http": "^4.5.2",
     "@ionic-native/launch-navigator": "^4.6.0",
     "@ionic-native/sms": "^4.5.2",
@@ -32,6 +33,7 @@
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.16",
     "@ionic/storage": "^2.1.3",
+    "angularfire2": "^5.0.0-rc.6",
     "cordova-android": "~7.0.0",
     "cordova-ios": "^4.5.4",
     "cordova-plugin-actionsheet": "^2.3.3",
@@ -41,18 +43,22 @@
     "cordova-plugin-dialogs": "^2.0.1",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-googleplus": "^5.2.1",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-mauron85-background-geolocation": "^2.3.3",
     "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-whitelist": "^1.3.1",
     "cordova-plugin-x-socialsharing": "^5.2.1",
     "cordova-sms-plugin": "^0.1.11",
     "cordova-sqlite-storage": "^2.2.0",
     "es6-promise-plugin": "^4.1.0",
+    "firebase": "^4.12.0",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
-    "rxjs": "5.5.2",
+    "promise-polyfill": "^7.1.0",
+    "rxjs": "^5.5.2",
     "sw-toolbox": "3.6.0",
     "uk.co.workingedge.phonegap.plugin.launchnavigator": "^4.1.5",
     "zone.js": "0.8.18"
@@ -80,7 +86,12 @@
       "cordova-plugin-advanced-http": {},
       "uk.co.workingedge.phonegap.plugin.launchnavigator": {
         "LOCATION_USAGE_DESCRIPTION": "This app requires access to your location for navigation purposes"
-      }
+      },
+      "cordova-plugin-googleplus": {
+        "REVERSED_CLIENT_ID": "com.googleusercontent.apps.666373632384-0alqpjjhmv9qnp6m0ulrie74p362gq2i",
+        "API_KEY": "AIzaSyBjSTycPLSSZCumHqwqXzad6o0NFeX5X_c"
+      },
+      "cordova-plugin-statusbar": {}
     },
     "platforms": [
       "android",
